--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,13 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>org.jboss.weld.servlet</groupId>
+			<artifactId>weld-servlet</artifactId>
+			<version>2.4.0.Final</version>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.glassfish</groupId>
 			<artifactId>javax.faces</artifactId>
 			<version>2.2.14</version>
@@ -81,7 +88,7 @@
 				<version>3.10.0</version>
 				<configuration>
 					<source>1.8</source>
-					<target>1.8</target> 
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 		</plugins>
