--- a/pom.xml
+++ b/pom.xml
@@ -25,10 +25,17 @@
 			<version>2.3.1</version>
 		</dependency>
 
+<!--		<dependency>-->
+<!--			<groupId>org.primefaces</groupId>-->
+<!--			<artifactId>primefaces</artifactId>-->
+<!--			<version>13.0.1</version>-->
+<!--			<scope>compile</scope>-->
+<!--		</dependency>-->
+
 		<dependency>
 			<groupId>org.primefaces</groupId>
 			<artifactId>primefaces</artifactId>
-			<version>13.0.1</version>
+			<version>6.0</version>
 			<scope>compile</scope>
 		</dependency>
 
